First working version. Tested with only one tag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,13 @@ project(rfid_amcl_node)
 # Required dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(rfid_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 
 # Include directories
 include_directories(include)
@@ -12,9 +19,20 @@ include_directories(include)
 add_executable(rfid_amcl_node 
   src/rfid_amcl/run_rfid_amcl_node.cpp
   src/rfid_amcl/rfid_amcl_node.cpp
+  src/rfid_amcl/differential_motion_model.cpp
+  src/rfid_amcl/particle_filter.cpp
+  src/rfid_amcl/particle.cpp
 )
 
-ament_target_dependencies(rfid_amcl_node rclcpp)
+ament_target_dependencies(rfid_amcl_node 
+                          rclcpp 
+                          geometry_msgs
+                          std_msgs
+                          nav_msgs
+                          rfid_msgs
+                          tf2
+                          tf2_ros
+                          tf2_geometry_msgs)
 
 # Install targets
 install(TARGETS
