--- a/params/rfid_localization_params.yaml
+++ b/params/rfid_localization_params.yaml
@@ -1,11 +1,11 @@
 /rfid_amcl:
   ros__parameters:
     use_sim_time: true
-    debug: false
+    debug: true
     tag_array_topic: /rfid/tag_array
-    covx: 0.03
-    covy: 0.03
-    cova: 0.01
+    covx: 0.04
+    covy: 0.04
+    cova: 0.03
     distance_threshold: 2.0
     min_particles: 800
     max_particles: 1000
